<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_rate_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/score_background">

    <RelativeLayout
        android:id="@+id/rate_dialog_title_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/rate_dialog_rate_title_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/rate_dialog_rate_title"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rate_dialog_title_layout">

        <RelativeLayout
            android:id="@+id/rate_dialog_rate_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/rate_dialog_rate"
                android:layout_width="185dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/rate_dialog_rate_button_bg"
                android:gravity="center"
                android:text="@string/rate_dialog_googleplay"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <TextView
            android:id="@+id/rate_dialog_rate_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/rate_dialog_rate_layout"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/rate_dialog_cancel" />
    </RelativeLayout>

</RelativeLayout>