<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/root_rate_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/score_background">

        <RelativeLayout
            android:id="@+id/rate_dialog_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rate_dialog_feedback_title_bg">

            <TextView
                android:id="@+id/rate_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:gravity="center"
                android:text="@string/rate_dialog_feedback_title"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rate_dialog_title_layout"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/rate_dialog_feedback_checkbox1"
                    style="@style/RateDialogCheckboxTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/rate_dialog_feedback_checkbox1"
                    android:textColor="#757575"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/rate_dialog_feedback_checkbox2"
                    style="@style/RateDialogCheckboxTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/rate_dialog_feedback_checkbox2"
                    android:textColor="#757575"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/rate_dialog_feedback_checkbox3"
                    style="@style/RateDialogCheckboxTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/rate_dialog_feedback_checkbox3"
                    android:textColor="#757575"
                    android:textSize="14sp"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="12dp"
                android:layout_marginTop="5dp"
                android:text="@string/rate_dialog_feedback_edittext"
                android:textColor="#757575"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/rate_dialog_feedback_edittext"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/rate_dialog_feedback_edittext_background"
                android:gravity="top"
                android:maxLength="500"
                android:padding="5dp"
                android:textColor="#757575"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rate_dialog_close"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:background="@drawable/rate_dialog_no_thanks_button_bg"
                    android:gravity="center"
                    android:text="@string/rate_dialog_feedback_close"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/rate_dialog_ok"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/rate_dialog_rate_button_bg"
                    android:gravity="center"
                    android:text="@string/rate_dialog_feedback_ok"
                    android:textColor="@android:color/white"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>