<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/root_rate_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/score_background">

    <RelativeLayout
        android:id="@+id/rate_dialog_title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rate_dialog_title_bg">

        <RelativeLayout
            android:id="@+id/rate_dialog_title_txt_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/rate_dialog_title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_dialog_title"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/rate_dialog_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rate_dialog_5_stars_txt"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:visibility="gone"/>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rate_dialog_star_outside_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rate_dialog_title_txt_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:id="@+id/rate_dialog_star_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/rate_dialog_star_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/rate_dialog_star_off"/>

                <TextView
                    android:id="@+id/rate_dialog_star_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/rate_dialog_star_off"/>

                <TextView
                    android:id="@+id/rate_dialog_star_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/rate_dialog_star_off"/>

                <TextView
                    android:id="@+id/rate_dialog_star_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/rate_dialog_star_off"/>

                <TextView
                    android:id="@+id/rate_dialog_star_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/rate_dialog_star_off"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/rate_dialog_star_layout"
                android:layout_below="@id/rate_dialog_star_layout"
                android:layout_marginRight="8dp"
                android:background="@drawable/rate_dialog_star_arrow"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rate_dialog_star_outside_layout"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="-10dp"
            android:text="@string/rate_dialog_rate_point"
            android:textColor="@android:color/white"/>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rate_dialog_title_layout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:paddingBottom="30dp">

            <TextView
                android:id="@+id/rate_dialog_no_thanks"
                android:layout_width="95dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rate_dialog_no_thanks_button_bg"
                android:gravity="center"
                android:text="@string/rate_dialog_rate_no_thanks"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/rate_dialog_later"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:background="@drawable/rate_dialog_later_button_bg"
                android:gravity="center"
                android:text="@string/rate_dialog_rate_later"
                android:textColor="@android:color/white"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/rate_dialog_rate"
                android:layout_width="75dp"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/rate_dialog_rate_button_bg"
                android:gravity="center"
                android:text="@string/rate_dialog_rate_rate"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>